2004/03/14 08:40 (+0100) ebassi

	* Print.pm: unindent ABSTRACT text (patch by Torsten Schoenfeld).

2004/02/26 17:37 (-0500) muppetman

	* README: fix the spelling of license; update the sandbox instructions.

2004/02/21 02:56 (+0100) ebassi
	
	* Print.pm, README, META.yml: bumped version to 0.91 - this is the
	last beta cycle for the Gnome2::Print module.
	
	* Makefile.PL: cleaned and updated build system.

2004/02/05 15:38 (+0100) ebassi

	* xs/GnomePrintUnit.xs, xs/GnomePrintUnitSelector.xs: hush compiler
	warnings (patch by Torsten Schoenfeld).

2004/01/24 21:44 (-0500) rwmcfa1

	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
	trick
	
	* perl-Gnome2-Print.spec.in: use pkg-config for Requires version

2004/01/14 21:38 (-0500) muppetman

	* Makefile.PL, README: update requirements to 1.020, since we need
	Glib::MakeHelper

2003/12/31 02:27 (-0500) muppetman

	* xs/GnomePrint2.xs: mark ax unused in functions which don't touch
	the input stack, to hush compiler warnings

	* xs/GnomeFont.xs, xs/GnomePrintConfig.xs,
	xs/GnomePrintPaperSelector.xs, xs/GnomePrintUnit.xs:
	don't let RETVAL be used uninitialized in alias switches.

	* xs/GnomePrintJobPreview.xs: don't give a type to 'class' when it's
	not needed

2003/12/29 16:32 (-0500) rwmcfa1

	* perl-Gnome2-Print.spec.in: use the new DATE replacement in 
	conjunction with VERSION to create the changlog on the fly, which is 
	better.

2003/12/23 00:02 (-0500) muppetman

	* xs/GnomeFont.xs, xs/GnomeFontDialog.xs, xs/GnomeFontFace.xs,
	xs/GnomeFontPreview.xs, xs/GnomeFontSelection.xs, xs/GnomeGlyphList.xs,
	xs/GnomePrintConfig.xs, xs/GnomePrintContext.xs, xs/GnomePrintJob.xs,
	xs/GnomePrintPaperSelector.xs, xs/GnomePrintUnit.xs,
	xs/GnomePrintUnitSelector.xs: remove the type specifiers on the class
	parameters, to keep xsubpp from creating a value that will be unused
	and therefore cause unused variable warnings.

2003/12/19 00:20 (+0100) ebassi
	
	* Print.pm: version 0.61
	